fixed way for logo

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <!-- Шапка страницы с логотипом -->
     <header>
       <img
-        src="/img/converted_logo_3.png"
+        src="img/converted_logo_3.png"
         alt="Logotipo del Hospital Americano"
       />
       <h1>Menú del Cafetería</h1>
