--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         src="img/converted_logo_3.png"
         alt="Logotipo del Hospital Americano"
       />
-      <h1>Menú del Cafetería</h1>
+      <h1>Menú de Cafetería</h1>
     </header>
 
     <!-- Первая страница -->
