added social media buttons

--- a/index.html
+++ b/index.html
@@ -97,12 +97,19 @@
       }
 
       .offer a {
+        display: inline-block;
+        padding: 10px 20px;
+        margin: 10px;
+        background-color: #003366;
         color: #fff;
-        text-decoration: underline;
+        text-decoration: none;
+        border-radius: 30px;
+        font-size: 1.2em;
+        transition: background-color 0.3s ease;
       }
 
       .offer a:hover {
-        text-decoration: none;
+        background-color: #00509e;
       }
 
       /* Стили для мобильных устройств */
